tests/NormalTests/paczka1/fuzzy1/67150430.err
Error in line 6: A81 S137 8,2
Error in line 10: 1Et A496 84,4
Error in line 11: A81 A496 45,0
Error in line 7: 2vOlqTf A81 43,4
Error in line 15: A81 A720 1,8
Error in line 16: bX0cd A720 72,5
